--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 body {
-    font-family: 'Dancing Script', cursive;
+    /* font-family: 'Dancing Script', cursive; */
     font-family: 'Source Code Pro', monospace;
+}
+
+h1 {
+    font-family: 'Dancing Script', cursive;
+    font-size: 4em;
+    border-left: 5px solid #DE369D;
+    padding-left: 15px;
 }
 
 .flexible {
@@ -9,10 +16,12 @@ body {
 
 .half-width {
     width: 50%;
+    padding-left: 200px;
+    padding-right: 20px;
 }
 
 .half-width img {
-    width: 60%;
+    width: 80%;
 }
 
 .word-color {
