--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     /* font-family: 'Dancing Script', cursive; */
     font-family: 'Source Code Pro', monospace;
+    margin: 0;
 }
 
 h1 {
